chore: add settings to .eslintrc

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,5 +43,13 @@
       }
     ],
     "@typescript-eslint/consistent-type-imports": ["error", { "prefer": "type-imports" }]
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"],
+        "paths": ["./src"]
+      }
+    }
   }
 }
